ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eye-image-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: uwfmxdtdizng.sealoshzh.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eye-image-api
            port:
              number: 80
